--- a/portif-lio-leonardo-09-main/portifólio-leonardo-09/style.css
+++ b/portif-lio-leonardo-09-main/portifólio-leonardo-09/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: aqua;
-    display: flex; 
+    display: block; 
     justify-content: center;
     align-items: center;
     height: 100vh;
